# open-on-app

./: .gitignore  BACKEND_INTEGRATION.md  CONNECTIONS_SETUP.md  DEVELOPMENT_SETUP.md  PRODUCTION_READINESS.md  PRODUCTION_REVIEW_SUMMARY.md  README.md  ROOT_CLEANUP_SUMMARY.md  guide_lines.md  instruction_guide.md  pubspec.yaml
backend/: .env.example  .gitignore  CLEAR_DATABASE.md  README.md  START_BACKEND.md  clear_database.py  pyproject.toml  requirements.txt  run.sh
backend/app/: __init__.py  dependencies.py  main.py
backend/app/api/: auth.py  capsules.py  connection_helpers.py  connections.py  drafts.py  letter_invites.py  letter_replies.py  recipients.py  self_letters.py
backend/app/core/: config.py  constants.py  logging.py  pagination.py  permissions.py  security.py
backend/app/db/: base.py  models.py  repositories.py  repository.py
backend/app/middleware/: rate_limiting.py  request_logging.py
backend/app/models/: schemas.py
backend/app/notifications/: __init__.py  service.py
backend/app/services/: capsule_service.py  connection_service.py  error_service.py  self_letter_service.py  state_machine.py  unlock_service.py
backend/app/utils/: helpers.py  url_helpers.py
backend/app/workers/: __init__.py  scheduler.py
backend/tests/: conftest.py  test_repositories.py  test_state_machine.py
docs/: ANONYMOUS_LETTERS_PRODUCTION_READINESS.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_UUID_REFACTORING.md  CHANGES_2025.md  CODE_STRUCTURE.md  CONNECTIONS_COMPLETE.md  CONNECTIONS_FEATURE.md  CONNECTIONS_IMPLEMENTATION_COMPLETE.md  INDEX.md  (+34 more)
(+358 files in other folders)
